# kr_notebook

./: .dockerignore  .env.example  .gitignore  .worktreeinclude  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs  config.toml.example  docker-compose.yml
.github/: CODEOWNERS
crates/offline-srs/: Cargo.toml
crates/offline-srs/src/: lib.rs
data/reference/: golden.db
doc/: 01_learning_fsa.md  02_card_selection.md  02_responsiveness_guidance.md  03_answer_validation.md  03_profiling.md  04_authentication.md  04_database.md  05_database.md  05_scripts.md  06_packs.md  07_endpoints.md  08_testing.md  10_scripts.md  12_content_authoring.md  12_offline_mode.md  dependencies.md
doc/plans/: tts-audio-generation.md
example_packs/dummy_test_pack/: cards.json  pack.json  vocabulary.json
py_scripts/: .gitignore  Dockerfile  README.md  pyproject.toml
py_scripts/src/db_manager/: __init__.py  cli.py  fixtures.py  schema.py
py_scripts/src/kr_scraper/: __init__.py  cli.py  lesson1.py  lesson2.py  lesson3.py  paths.py  segment.py  utils.py  vocabulary.py
py_scripts/tests/: __init__.py  test_manifest_operations.py  test_segment.py  test_vocabulary.py
scripts/: backup.sh  build-wasm.sh  fix_duplicate_cards.sql  generate_favicon.py  reset_pwd.py  restore.sh  rpi-deploy.sh  rpi-discover.sh  rpi-setup.sh  start.sh  stop.sh  sync-audio.sh  sync-db.sh  test.sh
src/: audio.rs  config.rs  filters.rs  input.css  lib.rs  main.rs  paths.rs  session.rs  state.rs  testing.rs  validation.rs
src/auth/: db.rs  handlers.rs  middleware.rs  mod.rs  password.rs
src/content/: audio.rs  cards.rs  discovery.rs  exercises.rs  generator.rs  mod.rs  packs.rs  reference.rs
src/db/: cards.rs  lesson_progress.rs  mod.rs  repository.rs  reviews.rs  schema.rs  stats.rs  tiers.rs
src/domain/: card.rs  mod.rs  review.rs
src/handlers/: diagnostic.rs  exercises.rs  guide.rs  library.rs  listen.rs  mod.rs  progress.rs  pronunciation.rs  reference.rs  settings.rs  study.rs  vocabulary.rs
src/profiling/: event.rs  logger.rs  mod.rs  noop.rs
src/services/: backup.rs  mod.rs  pack_manager.rs
src/srs/: card_selector.rs  fsrs_scheduler.rs  mod.rs  sm2.rs
static/: site.webmanifest  sw.js
static/js/: auth.js  backend-ping.js  card-interactions.js  offline-detect.js  offline-storage-interface.js  offline-storage.js  offline-study.js  offline-sync.js  sw-register.js  vocabulary-search.js
static/wasm/: offline_srs.d.ts  offline_srs.js  offline_srs_bg.wasm  offline_srs_bg.wasm.d.ts  package.json
templates/: base.html  base_minimal.html  card.html  guide.html  index.html  interactive_card.html  library.html  no_cards.html  offline.html  offline_study.html  practice.html  practice_card.html  practice_interactive_card.html  progress.html  pronunciation.html  settings.html  study.html  study_interactive.html
templates/auth/: guest.html  login.html  register.html
templates/exercises/: cloze.html  cloze_feedback.html  (+3 more)
tests/: TESTING_DEBT.md
tests/integration/: conftest.py  pyproject.toml  run_tests.sh
tests/integration/fixtures/test_exercises_pack/: pack.json
tests/integration/fixtures/test_exercises_pack/exercises/: lesson_01.json
tests/integration/fixtures/test_lesson_pack/: cards.json  pack.json
tests/integration/fixtures/test_vocab_directory_pack/: cards.json  pack.json
tests/integration/fixtures/test_vocab_directory_pack/vocabulary/: lesson_01.json  lesson_02.json
tests/integration/fixtures/test_vocabulary_pack/: cards.json  pack.json  vocabulary.json
tests/integration/tests/: __init__.py  test_admin_security.py  test_answer_validation.py  test_auth.py  test_daily_limit.py  test_data_isolation.py  test_exercises.py  test_groups.py  test_lesson_filtering.py  test_offline.py  test_offline_sync.py  test_override.py  test_packs.py  test_sibling_exclusion.py  test_study.py  test_tiers.py  test_timer_with_packs.py  test_vocabulary_directory.py  test_vocabulary_search.py
(+73 files in other folders)
