[package]
name = "kr_notebook"
version = "0.1.0"
edition = "2024"

[features]
default = []
profiling = ["dep:serde_json"]

[dependencies]
askama = "0.15.0"
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.42", features = ["serde"] }
fsrs = "5.2.0"
rand = "0.9"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
axum-test = "18.4.1"
