[package]
name = "kr_notebook"
version = "0.3.0"
edition = "2024"
license = "AGPL-3.0"
repository = "https://github.com/PheelaV/kr_notebook"
description = "Korean Hangul learning app with FSRS spaced repetition"

[features]
default = []
profiling = []
testing = []
rebuild-wasm = []  # Rebuild offline-srs WASM module during cargo build

[dependencies]
argon2 = "0.5"
askama = "0.15.0"
axum = { version = "0.8.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15"
fsrs = "5.2.0"
rand = "0.9"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
time = "0.3"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1.0"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10.9"
hex = "0.4.3"
urlencoding = "2.1"
html-escape = "0.2.13"
zip = "2.1"

[dev-dependencies]
axum-test = "18.4.1"
tempfile = "3.24.0"
