[project]
name = "kr-scraper"
version = "0.1.0"
description = "Korean pronunciation audio scraper for howtostudykorean.com"
readme = "README.md"
authors = [
    { name = "Filip", email = "34603115+PheelaV@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "pydub>=0.25.0",
    "pyrootutils>=1.0.4",
    "tomlkit>=0.13.3",
]

[project.scripts]
kr-scraper = "kr_scraper:main"
db-manager = "db_manager:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.14.10",
]
