[package]
name = "offline-srs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "WASM module for offline FSRS scheduling and answer validation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rs-fsrs = "1.2"
chrono = { version = "0.4", features = ["wasmbind"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# For better WASM error messages
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for size
opt-level = "s"
lto = true
