[project]
name = "kr-integration-tests"
version = "0.1.0"
description = "Integration tests for kr_notebook Korean learning app"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
